@@ -399,6 +399,7 @@ begin
         token := identifiers'first;                -- dummy, replaced by g_n_t
         getNextToken;                              -- load first token
         parseConfig;
+        expectSemicolon;
         expect( eof_t );                        -- should be nothing else
      end if;
   elsif C_errno = 2 then                             -- file not found?
@@ -462,6 +463,7 @@ procedure interpretScript( scriptPath : string ) is
   oldScriptFilePath : unbounded_string;
   firstLine : aliased unbounded_string;
   res : int;
+  scriptDir : unbounded_string;
 begin
   if syntax_check then
      if verboseOpt then
@@ -505,7 +507,11 @@ begin
     end if;
     -- Only run an acceptable file
     if scriptFile > 0 then
-       if not C_is_includable_file( to_string( scriptFilePath ) & ASCII.NUL ) then
+       scriptDir := dirname( scriptFilePath );
+       if not C_is_secure_dir( to_string( scriptDir ) & ASCII.NUL ) then
+         err( "the script directory " & optional_bold( to_string( scriptDir ) ) & " is either not readable, is world writable, is not a directory" );
+         goto error;
+       elsif not C_is_includable_file( to_string( scriptFilePath ) & ASCII.NUL ) then
          err( "the script file " & optional_bold( to_string( scriptFilePath ) ) & " is either not readable, is world writable, is not a regular file or is empty" );
          goto error;
        end if;
@@ -703,6 +709,7 @@ procedure doGlobalPolicy is
   save_execOpt : commandLineOption;              -- for executing policy
   res  : int;
   path : string := "/etc/sparforte_policy";
+  scriptDir : unbounded_string;
 begin
   save_rshOpt := rshOpt;                         -- if restricted shell
   save_execOpt := execOpt;                       -- if cmd line script
@@ -713,12 +720,17 @@ begin
      -- close EINTR is a diagnostic message.  Do not handle.
   end if;
   if C_errno /= ENOENT then
-     if C_errno = 0 and C_is_includable_file( path & ASCII.NUL ) then
+     if C_errno = 0 then
+        scriptDir := dirname( to_unbounded_string( path ) );
+        if not C_is_secure_dir( to_string( scriptDir ) & ASCII.NUL ) then
+          err( "the global policy directory " & optional_bold( to_string( scriptDir ) ) & " is either not readable, is world writable, is not a directory" );
+          raise BAD_PROFILE with "global policy directory " & optional_bold( path ) & " is either not readable, is world writable, is not a directory";
+        elsif not C_is_includable_file( path & ASCII.NUL ) then
+          err( "global policy file " & optional_bold( path ) & " is either not readable, is world writable, is not a regular file or is empty" );
+          raise BAD_PROFILE with "global policy file '" & path & "' is either not readable, is world writable, is not a regular file or is empty";
+        end if;
         sourceFilesList.Push( SourceFiles, aSourceFile'( pos => 0, name => basename( to_unbounded_string( path ) ) ) );
         interpretPolicy( path ); -- run policy script
-     else
-        err( "global policy file " & optional_bold( path ) & " is either not readable, is world writable, is not a regular file or is empty" );
-        raise BAD_PROFILE with "global policy file " & optional_bold( path ) & " is either not readable, is world writable, is not a regular file or is empty";
      end if;
   end if;
   if error_found then
@@ -746,6 +758,7 @@ procedure doGlobalConfig is
   save_execOpt : commandLineOption;              -- for executing config
   res  : int;
   path : string := "/etc/sparforte_config";
+  scriptDir : unbounded_string;
 begin
   save_rshOpt := rshOpt;                         -- if restricted shell
   save_execOpt := execOpt;                       -- if cmd line script
@@ -757,12 +770,17 @@ begin
      -- close EINTR is a diagnostic message.  Do not handle.
   end if;
   if C_errno /= ENOENT then
-     if C_errno = 0 and C_is_includable_file( path & ASCII.NUL ) then
+     if C_errno = 0 then
+        scriptDir := dirname( to_unbounded_string( path ) );
+        if not C_is_secure_dir( to_string( scriptDir ) & ASCII.NUL ) then
+          err( "the global config directory " & optional_bold( to_string( scriptDir ) ) & " is either not readable, is world writable, is not a directory" );
+          raise BAD_PROFILE with "global config directory " & optional_bold( path ) & " is either not readable, is world writable, is not a directory";
+        elsif not C_is_includable_file( path & ASCII.NUL ) then
+          err( "global config file " & optional_bold( path ) & " is either not readable, is world writable, is not a regular file or is empty" );
+          raise BAD_PROFILE with "global config file '" & path & "' is either not readable, is world writable, is not a regular file or is empty";
+        end if;
         sourceFilesList.Push( SourceFiles, aSourceFile'( pos => 0, name => basename( to_unbounded_string( path ) ) ) );
         interpretConfig( path ); -- run config script
-     else
-        err( "global config file " & optional_bold( path ) & " is either not readable, is world writable, is not a regular file or is empty" );
-        raise BAD_PROFILE with "global config file " & optional_bold( path ) & " is either not readable, is world writable, is not a regular file or is empty";
      end if;
   end if;
   if error_found then
@@ -784,6 +802,7 @@ procedure doGlobalProfile is
   save_execOpt : commandLineOption;              -- for executing profile
   res : int;
   path : string := "/etc/sparforte_profile";
+  scriptDir : unbounded_string;
 begin
   save_rshOpt := rshOpt;                         -- if restricted shell
   save_execOpt := execOpt;                       -- if cmd line script
@@ -795,12 +814,17 @@ begin
      -- close EINTR is a diagnostic message.  Do not handle.
   end if;
   if C_errno /= ENOENT then
-     if C_errno = 0 and C_is_includable_file( path & ASCII.NUL ) then
+     if C_errno = 0 then
+        scriptDir := dirname( to_unbounded_string( path ) );
+        if not C_is_secure_dir( to_string( scriptDir ) & ASCII.NUL ) then
+          err( "the global profile directory " & optional_bold( to_string( scriptDir ) ) & " is either not readable, is world writable, is not a directory" );
+          raise BAD_PROFILE with "global profile directory " & optional_bold( path ) & " is either not readable, is world writable, is not a directory";
+        elsif not C_is_includable_file( path & ASCII.NUL ) then
+          err( "global profile file " & optional_bold( path ) & " is either not readable, is world writable, is not a regular file or is empty" );
+          raise BAD_PROFILE with "global profile file '" & path & "' is either not readable, is world writable, is not a regular file or is empty";
+        end if;
         sourceFilesList.Push( SourceFiles, aSourceFile'( pos => 0, name => basename( to_unbounded_string( path ) ) ) );
         interpretScript( path ); -- run login script
-     else
-        err( "global profile file " & optional_bold( path ) & " is either not readable, is world writable, is not a regular file or is empty" );
-        raise BAD_PROFILE with "global profile file " & optional_bold( path ) & " is either not readable, is world writable, is not a regular file or is empty";
      end if;
   end if;
   if error_found then
@@ -823,6 +847,7 @@ procedure doLocalProfile is
   home_id      : identifier;                     -- HOME variable
   res          : int;
   profilePath  : unbounded_string;
+  scriptDir : unbounded_string;
 begin
   save_rshOpt := rshOpt;                   -- if restricted shell
   save_execOpt := execOpt;                 -- if cmd line script
@@ -841,12 +866,17 @@ begin
         -- close EINTR is a diagnostic message.  Do not handle.
      end if;
      if C_errno /= ENOENT then
-        if C_errno = 0 and C_is_includable_file( to_string( profilePath ) & ASCII.NUL ) then
+        if C_errno = 0 then
+           scriptDir := dirname( profilePath );
+           if not C_is_secure_dir( to_string( scriptDir ) & ASCII.NUL ) then
+             err( "the local profile directory " & optional_bold( to_string( scriptDir ) ) & " is either not readable, is world writable, is not a directory" );
+             raise BAD_PROFILE with "local profile directory " & optional_bold( to_string( profilePath ) ) & " is either not readable, is world writable, is not a directory";
+           elsif not C_is_includable_file( to_string( profilePath ) & ASCII.NUL ) then
+             err( "the local profile file " & optional_bold( to_string( profilePath ) ) & " is either not readable, is world writable, is not a regular file or is empty" );
+             raise BAD_PROFILE with "local profile file '" & to_string( profilePath ) & "' is either not readable, is world writable, is not a regular file or is empty";
+           end if;
            sourceFilesList.Push( SourceFiles, aSourceFile'( pos => 0, name => basename( profilePath ) ) );
            interpretScript( to_string( profilePath ) ); -- do profile
-        else
-           err( "local profile file " & optional_bold( to_string( profilePath ) ) & " is either not readable, is world writable, is not a regular file or is empty" );
-           raise BAD_PROFILE with "local profile file " & optional_bold( to_string( profilePath ) ) & " is either not readable, is world writable, is not a regular file or is empty";
         end if;
      end if;
   end if;
