@@ -584,6 +584,10 @@ function C_is_waiting_file( path : string ) return boolean;
 pragma import( C, C_is_waiting_file, "C_is_waiting_file" );
 --  True if a file exists, is readable and has data
 
+function C_is_secure_dir( path : string ) return boolean;
+pragma import( C, C_is_secure_dir, "C_is_secure_dir" );
+--  True if a dir exists, is readable, not world writable.
+
 function C_file_length( path : string ) return long_integer;
 pragma import( C, C_file_length, "C_file_length" );
 --  Return length of file
